--- a/markus.html
+++ b/markus.html
@@ -28,8 +28,8 @@
               <input type="text" class="form-control" id="venue" placeholder="Ex. Market Hotel">
             </div>
             <div class="form-group">
-              <label for="eventName">City/State: </label>
-              <input type="text" class="form-control" id="cityState" aria-describedby="eventNameSub" placeholder="Ex. Philadelphia">
+              <label for="eventName">Zip Code <Code></Code>: </label>
+              <input type="text" class="form-control" id="zipCode" aria-describedby="eventNameSub" placeholder="Ex. Philadelphia">
             </div>
             <button type="submit" class="btn btn-dark" id="submit-btn">Submit</button>
           </form>
@@ -39,7 +39,18 @@
 
     <div class="container">
       <div class="col-lg-12" id="tableZone">
+        <table class='table'>
+          <thead>
+            <td>Date</td>
+            <td>Event</td>
+            <td>Venue Name</td>
+            <td>Zip Code</td>
+            <td>Modal</td>
+          </thead>
+          <tbody class='card-body'  id="tableBody">
 
+          </tbody>
+        </table>
 
           <!--this is the target zone for where we want to dynamically create cards-->
 
