firebase started, issues with inputs, not storing info

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group">
               <label for="eventName">City/State: </label>
-              <input type="text" class="form-control" id="cityState" aria-describedby="eventNameSub" placeholder="Ex. Philadelphia">
+              <input type="text" class="form-control" id="zipCode" aria-describedby="eventNameSub" placeholder="Ex. Philadelphia">
             </div>
             <button type="submit" class="btn btn-dark" id="submit-btn">Submit</button>
           </form>
